<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_height="match_parent">
<LinearLayout
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/l1"
            android:layout_marginStart="@dimen/editTextMargin"
            android:layout_marginEnd="@dimen/editTextMargin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/blood"

            android:theme="@style/MyTextInputLayout"
            android:layout_height="wrap_content"
            app:counterTextAppearance="@color/grey"
            android:hint="@string/s7">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et1"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"

                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/editTextMargin"
            android:layout_marginEnd="@dimen/editTextMargin"
            android:layout_marginTop="@dimen/margin"
            android:theme="@style/MyTextInputLayout"
            android:layout_marginBottom="@dimen/margin"
            android:textColorHint="@color/grey"
            android:layout_height="wrap_content"
            app:counterTextAppearance="@color/grey"

            android:hint="@string/s5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et2"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="click"
            android:text="@string/s4"
            android:textColor="@color/blood"
            android:textSize="@dimen/textSize" />

    </LinearLayout>
</ScrollView>