<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_height="match_parent">
    <LinearLayout
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/editTextMargin"
            android:layout_marginEnd="@dimen/editTextMargin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="3dp"
            android:theme="@style/MyTextInputLayout"
            android:layout_height="wrap_content"
            app:counterTextAppearance="@color/grey"
            android:hint="@string/s7">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et1"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"

                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/editTextMargin"
            android:layout_marginEnd="@dimen/editTextMargin"
            android:layout_marginTop="@dimen/margin"
            android:theme="@style/MyTextInputLayout"
            android:layout_marginBottom="@dimen/margin"
            android:textColorHint="@color/grey"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:boxStrokeWidth="6dp"
            app:counterTextAppearance="@color/grey"

            android:hint="@string/s5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et2"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_margin="@dimen/margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s3"
                android:layout_gravity="center"
                android:layout_margin="@dimen/textMargin"
                android:textSize="@dimen/textSize"
                android:textColor="@color/blood"
                android:id="@+id/accept"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="или"
                android:textColor="@color/black"
                android:layout_margin="@dimen/textMargin"
                android:layout_gravity="center"
                android:textSize="@dimen/textSize"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butReg"
                android:layout_gravity="center"
                android:layout_margin="@dimen/textMargin"
                android:textSize="@dimen/textSize"
                android:textColor="@color/blood"
                android:id="@+id/reg"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="@dimen/imgSize">
            <Button
                android:id="@+id/vk"
                android:layout_width="@dimen/imgSize"
                android:layout_height="@dimen/imgSize"
                android:background="@drawable/vk"
                />
            <Button
                android:id="@+id/ok"
                android:layout_margin="@dimen/margin"
                android:layout_width="@dimen/imgSize"
                android:layout_height="@dimen/imgSize"
                android:background="@drawable/ok"
                />
            <Button
                android:id="@+id/face"
                android:layout_width="@dimen/imgSize"
                android:layout_height="@dimen/imgSize"
                android:background="@drawable/face"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>