<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin"
        android:layout_height="wrap_content">
    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="qweqwe"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="75dp"
                android:id="@+id/textT"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="Описание:"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="awe"
                android:visibility="gone"
                android:textColor="@color/black"
                android:maxLines="7"
                android:ellipsize="end"
                android:id="@+id/text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="75dp"
                android:id="@+id/addressT"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:textColor="@color/black"
                android:text="Адрес:"/>
            <TextView
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:textColor="@color/black"
                android:text="asd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/webT"
                android:layout_width="75dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:textColor="@color/black"
                android:text="Сайт:  "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/website"
                android:visibility="gone"
                android:textColorLink="@color/blood"
                android:autoLink="web"
                android:textColor="@color/black"
                android:linksClickable="true"
                android:text="asd"/>

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:layout_height="@dimen/splitterHeight"/>
        <LinearLayout
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="@dimen/imageRate"
                android:layout_height="@dimen/imageRate"
                android:layout_margin="@dimen/textMargin"
                android:background="@drawable/like_states"
                android:id="@+id/like"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:id="@+id/rate"
                android:layout_margin="@dimen/textMargin"/>
            <Button
                android:layout_width="@dimen/imageRate"
                android:layout_margin="@dimen/textMargin"
                android:layout_height="@dimen/imageRate"
                android:background="@drawable/dislike_states"
                android:id="@+id/dislike"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/grey"
            android:theme="@style/MyTextInputLayout"
            android:layout_height="wrap_content"
            android:hint="@string/s20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/review"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"

                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/blood"
            android:id="@+id/accept"
            android:text="@string/s16"/>
        <TextView
            android:textColor="@color/blood"
            android:id="@+id/show"
            android:textSize="@dimen/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s21"
            />
        <com.nixbyte.project.utils.MyRecycleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/reviewsList"/>
    </LinearLayout>


</LinearLayout>
